# gpt2

./: .gitignore  pyproject.toml  train_gpt2.py
