[project]
name = "gpt-2-recreate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.1",
    "numpy>=2.2.5",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "wandb>=0.19.10",
]
